# planhub

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Makefile  README.md  grow.py  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: ISSUE_FORMAT.md  MILESTONE_FORMAT.md  NAME_IDEAS.md  REPO_LAYOUT.md
issues/: README.md
milestones/: README.md
plans/: README.md
src/planhub/: __main__.py  auth.py  cli.py  config.py  documents.py  github.py  importer.py  layout.py  repository.py  slug.py
src/planhub/cli/: __init__.py  app.py  sync_plan.py
src/planhub/cli/commands/: __init__.py
src/planhub/cli/commands/init/: __init__.py
src/planhub/cli/commands/issue/: __init__.py
src/planhub/cli/commands/setup/: __init__.py
src/planhub/cli/commands/sync/: __init__.py
tests/: conftest.py  test_auth.py  test_cli.py  test_closed_issues_archiving.py  test_config.py  test_documents.py  test_github_client.py  test_importer.py  test_repository.py  test_sync.py  test_sync_create.py
tests/commands/: test_config_commands.py
tests/config/: test_config_helpers.py
tests/sync/: test_sync_plan_helpers.py
