[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "planhub"
version = "0.1.0"
description = "Sync local planning files to GitHub Issues."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Planhub Maintainers" }
]
keywords = ["github", "issues", "milestones", "planning", "sync"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.3",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/your-org/planhub"
Repository = "https://github.com/your-org/planhub"

[project.scripts]
planhub = "planhub.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/planhub"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
publish = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
